# pipefit

./: .python-version  LICENSE  Makefile  README.md  analysis.ipynb  pyproject.toml
datasets/test_dataset/factors/: highwayMask.tif  inverted_urban_zones.tif  railwayMask.tif  riversMask.tif  slopeSuitability.tif  wetland1Mask.tif  wetland2Mask.tif  wetlandMask.tif
datasets/test_dataset/reference/: test_reference_pipeline.geojson
datasets/test_dataset/results/: cost_map.tif  least_cost_path.geojson
src/pipefit/: __init__.py  cost_map.py  data_loader.py  path_evaluator.py  path_finder.py  weight_optimizer.py
