[project]
name = "pipefit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy<2",
    "pyastar2d>=1.0.6",
    "pyproj>=3.6.1",
    "rasterio>=1.4.3",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "shapely>=2.0.7",
]

[project.scripts]
pipefit = "pipefit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "temp",
]
